--- a/Hawk.ETL.Controls/SystemStateViewer.xaml
+++ b/Hawk.ETL.Controls/SystemStateViewer.xaml
@@ -91,8 +91,8 @@
 		</DataTemplate>
 	</UserControl.Resources>
     <StackPanel>
-		<Grid Height="149.399" Margin="8,0">
-    		<ListBox x:Name="processListBox" ToolTip="当前加载的所有算法模块" SelectedItem="{Binding SelectedProcess}" Margin="0,0,0,4" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[模块管理]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
+		<Grid Height="149.399" Margin="8,0,8,32">
+    		<ListBox x:Name="processListBox" ToolTip="当前加载的所有算法模块" SelectedItem="{Binding SelectedProcess}" Margin="0,0,0,15" MouseMove="processListBox_MouseMove" DataContext="{Binding PluginDictionary[模块管理]}" ItemsSource="{Binding ProcessCollectionView}"  ItemTemplate="{DynamicResource DataTemplate2}"  >
     			<ListBox.Resources>
     				<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[模块管理].BindingCommands.ChildActions[4].ChildActions}"/>
 
@@ -128,23 +128,21 @@
 							
     		</StackPanel>
     	</Grid>
-		<Grid Height="128.267" Margin="8,0">
-			<Grid Margin="0,0,0,4">
-				<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="数据表" VerticalAlignment="Top" Margin="0,-21.25,0,0"/>
-				<ListBox x:Name="dataListBox" ToolTip="当前加载的所有数据，可在此进行管理" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}">
-					<ListBox.Resources>
-						<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}"/>
-						<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
-							<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
-						</Style>
-					</ListBox.Resources>
-					<ListBox.ContextMenu>
-						<ContextMenu   ItemsSource="{Binding PluginDictionary[数据管理].Commands[3].ChildActions}"/>
+		<Grid Margin="8,0,8,32" Height="124.267">
+			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="数据表" VerticalAlignment="Top" Margin="0,-0.24,0,0"/>
+			<ListBox x:Name="dataListBox" ToolTip="当前加载的所有数据，可在此进行管理" SelectedItem="{Binding SelectedDataCollection}" MouseMove="ListBox_MouseMove_1" DataContext="{Binding PluginDictionary[数据管理]}" ItemsSource="{Binding DataCollections}" ItemTemplate="{DynamicResource DataTemplate1}" Margin="0,15">
+				<ListBox.Resources>
+					<ContextMenu x:Key="resourceContextMenu"  ItemsSource="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}"/>
+					<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
+						<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
+					</Style>
+				</ListBox.Resources>
+				<ListBox.ContextMenu>
+					<ContextMenu   ItemsSource="{Binding PluginDictionary[数据管理].Commands[3].ChildActions}"/>
 
-					</ListBox.ContextMenu>
-				</ListBox>
-			</Grid>
-			<StackPanel  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,12,0" Orientation="Horizontal" VerticalAlignment="Bottom">
+				</ListBox.ContextMenu>
+			</ListBox>
+			<StackPanel  DataContext="{Binding PluginDictionary[数据管理].Commands[2].ChildActions}" HorizontalAlignment="Right" Margin="0,0,4,0" Orientation="Horizontal" VerticalAlignment="Bottom">
 				<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
 				<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
 				<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
@@ -154,7 +152,7 @@
 				<Button Style="{DynamicResource miniButton}" DataContext="{Binding [6]}" />
 			</StackPanel>
 		</Grid>
-		<Expander DataContext="{Binding PluginDictionary[数据管理]}" Header="数据连接器">
+		<Expander DataContext="{Binding PluginDictionary[数据管理]}" Header="数据连接器" Margin="8,0,8,32">
         	
         
         
@@ -192,7 +190,7 @@
         
         
 		</Expander>
-		<Expander Margin="0"  DataContext="{Binding PluginDictionary[模块管理]}" Header="工作线程视图"  >
+		<Expander Margin="8,0,8,32"  DataContext="{Binding PluginDictionary[模块管理]}" Header="工作线程视图"  >
 			<Grid MinHeight="200" >
 				<Grid.RowDefinitions>
 					<RowDefinition Height="0.858*"/>
