--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -13,18 +13,19 @@
     xmlns:System_Windows_Controls_WpfPropertyGrid="clr-namespace:System.Windows.Controls.WpfPropertyGrid;assembly=System.Windows.Controls.WpfPropertyGrid"
     xmlns:attributes="clr-namespace:System.Windows.Controls.WpfPropertyGrid.Attributes;assembly=System.Windows.Controls.WpfPropertyGrid"
     xmlns:connectors="clr-namespace:Hawk.Core.Utils.Plugins;assembly=Hawk.Core"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
     x:Class="Hawk.ETL.Controls.ETLSmartView"
     mc:Ignorable="d"
-    d:DesignHeight="719.5" d:DesignWidth="1280">
+    d:DesignHeight="855.5" d:DesignWidth="1576">
     <UserControl.Resources>
     	<Utils:GeneratorConverter x:Key="GeneratorConverter"/>
         <Utils:GroupConverter x:Key="GroupConverter"/>
         <local:GroupColorConverter x:Key="GroupColorConverter" />
         <mvvm:BindingProxy x:Key="BindingProxy" Data="{Binding}" />
         <themes:MetroConverter x:Key="MetroConverter" />
-   
+        <themes:ModuleMetroConverter x:Key="ModuleMetroConverter" />
 
-         <ContextMenu x:Key="resourceContextMenu"
+        <ContextMenu x:Key="resourceContextMenu"
         					DataContext="{Binding Data.Commands, Source={StaticResource BindingProxy}}">
                             <MenuItem DataContext="{Binding [0]}" Style="{DynamicResource CommandMenuItem}" />
             <MenuItem DataContext="{Binding [1]}" Style="{DynamicResource CommandMenuItem}" />
@@ -161,28 +162,27 @@
 
             </Style.Triggers>
         </Style>
-
-
-        <ItemsPanelTemplate x:Key="ItemsPanelTemplate1">
+         <system:Double x:Key="LargeFont">14.667</system:Double>
+     <ItemsPanelTemplate x:Key="ItemsPanelTemplate1">
             <WrapPanel />
         </ItemsPanelTemplate>
-
+ 
         <DataTemplate x:Key="DataTemplateList">
-            <Grid HorizontalAlignment="Stretch" Height="65.334" Width="100" d:DesignWidth="210.332"
-        		d:DesignHeight="136.471">
-                <Label Content="{Binding Name}" Margin="0" Height="Auto" VerticalAlignment="Bottom" FontSize="12"
-        			d:LayoutOverrides="GridBoX" HorizontalAlignment="Center" Width="Auto" />
-                <Rectangle Stroke="Black" ToolTip="{Binding Description}" RadiusX="13" RadiusY="3" StrokeThickness="0"
-        			Width="45" Height="45" HorizontalAlignment="Center" VerticalAlignment="Top"
-        			MouseLeftButtonUp="Rectangle_MouseLeftButtonUp">
-                    <Rectangle.Fill>
-                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.3,0">
-                            <GradientStop Color="#FF3B3B3B" Offset="0.418" />
-                            <GradientStop Color="#FF818181" Offset="0.125" />
-                        </LinearGradientBrush>
-                    </Rectangle.Fill>
-                </Rectangle>
-            </Grid>
+            <StackPanel Orientation="Horizontal" Margin="0,4" >
+            		<Rectangle Width="20" Height="20" Margin="0,0,20,0" >
+					<Rectangle.Fill>
+						<VisualBrush Stretch="Fill"
+							Visual="{Binding  Converter={StaticResource ModuleMetroConverter}, Mode=OneWay}"  />
+					</Rectangle.Fill>
+				</Rectangle>
+            	<StackPanel HorizontalAlignment="Stretch" Height="Auto" Width="Auto" Orientation="Vertical">
+            		<Label Content="{Binding Name}" Margin="0" Height="Auto" VerticalAlignment="Stretch" FontSize="{DynamicResource LargeFont}"
+            			d:LayoutOverrides="GridBoX" HorizontalAlignment="Left" Width="Auto" />
+            		<Label Content="{Binding Description}" Margin="0" Height="Auto" VerticalAlignment="Stretch"
+            			HorizontalAlignment="Left" Width="Auto" Opacity="0.8" />
+            	
+            	</StackPanel>
+            </StackPanel>
             <DataTemplate.Triggers>
                 <EventTrigger RoutedEvent="Mouse.MouseEnter" />
                 <EventTrigger RoutedEvent="Mouse.MouseLeave" />
@@ -335,7 +335,7 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.316*" />
+            <ColumnDefinition Width="0.216*" />
             <ColumnDefinition Width="0.684*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -345,7 +345,7 @@
         <Grid Grid.Column="1" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
-                <RowDefinition Height="60" />
+                <RowDefinition Height="40" />
             
             </Grid.RowDefinitions>
             <StackPanel HorizontalAlignment="Right" Grid.Row="2" VerticalAlignment="Center" Margin="0,0,10,0"/>
@@ -354,7 +354,15 @@
                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal"
 					d:LayoutOverrides="Height" VerticalAlignment="Center">
                     <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"><Run Language="zh-cn" Text="任务名称"/></TextBlock>
-                	<TextBox TextWrapping="Wrap" Text="{Binding Name}" System_Windows_Controls_WpfPropertyGrid:TextBoxExtender.CommitOnEnter="True" VerticalAlignment="Center" Width="150" Margin="8,0,30,0" FontSize="16"/>
+                	<TextBox TextWrapping="Wrap" Text="{Binding Name}" System_Windows_Controls_WpfPropertyGrid:TextBoxExtender.CommitOnEnter="True" VerticalAlignment="Center" Margin="8,0,30,0" FontSize="16" MinWidth="100"/>
+                	<TextBlock TextWrapping="Wrap" Text="模块"
+                		VerticalAlignment="Center" />
+                	<TextBox Width="50" TextWrapping="Wrap" Text="{Binding ETLMount}" VerticalAlignment="Center"
+                		FontSize="16" />
+                	<TextBlock TextWrapping="Wrap" Text="/" VerticalAlignment="Center"
+                		FontSize="16" />
+                	<TextBlock TextWrapping="Wrap" Text="{Binding AllETLMount}"
+                		VerticalAlignment="Center" FontSize="16" />
                     </StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 						<Button Style="{DynamicResource middleButton2}" DataContext="{Binding Commands5[4]}" Width="35"
@@ -418,6 +426,15 @@
 						</Button>
 						
 					</StackPanel>
+					<StackPanel HorizontalAlignment="Right" Orientation="Horizontal"
+						VerticalAlignment="Center">
+						<TextBlock TextWrapping="Wrap" Margin="0"
+							VerticalAlignment="Center" ><Run Language="zh-cn" Text="采样量"/></TextBlock>
+						<TextBox Width="30" TextWrapping="Wrap" Text="{Binding SampleMount}" ToolTip="设置获取数据表的前n行" VerticalAlignment="Center"
+							FontSize="16" />
+						<CheckBox Content="自动刷新" IsChecked="{Binding IsAutoRefresh}" VerticalAlignment="Center" Margin="15,0,0,0" />
+						<CheckBox Content="调试详情" IsChecked="{Binding DisplayDetail}" VerticalAlignment="Center" Margin="15,0,0,0" />
+					</StackPanel>
                
                  </Grid>
                              <ScrollViewer x:FieldModifier="public" x:Name="ScrollViewer" Margin="0"
@@ -448,7 +465,7 @@
                     </DataGrid>
                     <ListBox x:FieldModifier="public" x:Name="ToolList" Margin="8"
 						ItemsSource="{Binding SmartGroupCollection}"
-						ItemsPanel="{DynamicResource ItemsPanelTemplate1}"
+					 	ItemsPanel="{DynamicResource ItemsPanelTemplate1}"
 						ItemTemplate="{DynamicResource DataTemplate1}"
 						ScrollViewer.VerticalScrollBarVisibility="Disabled"
 						ScrollViewer.HorizontalScrollBarVisibility="Disabled" VerticalContentAlignment="Stretch" />
@@ -458,25 +475,34 @@
                 </Grid>
             </ScrollViewer>
         </Grid>
-        <TextBox x:Name="SearchBox" Margin="81.348,12.835,29.75,0" TextWrapping="Wrap" VerticalAlignment="Top"
-        	Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        <StackPanel Height="17.24" Margin="20,12.835,29.75,0" Orientation="Horizontal" VerticalAlignment="Top" d:LayoutOverrides="Width">
+        	 	  <Rectangle Width="15" Height="15" Margin="0,0,10,0" >
+                                <Rectangle.Fill>
+                                    <VisualBrush Stretch="Fill"
+                                                 Visual="{Binding ConverterParameter=magnify, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
+                                </Rectangle.Fill>
+                            </Rectangle>
+        	<TextBlock Margin="0,3.498,0,0" TextWrapping="Wrap" VerticalAlignment="Center"><Run Language="zh-cn" Text="快速检索:" /></TextBlock>
+        	<TextBox x:Name="SearchBox" TextWrapping="Wrap"
+        		Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="193.1" d:LayoutOverrides="Height" MinWidth="150" />
+        </StackPanel>
         <Grid Margin="8,8,8,0" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*" />
                 <RowDefinition Height="0.6*" />
-				  <RowDefinition Height="60" />
+				  <RowDefinition Height="40" />
             </Grid.RowDefinitions>
             <ListBox x:Name="ETLToolList" x:FieldModifier="public" Margin="0,27,0,8"
 				ItemsSource="{Binding ETLToolsView}" ItemTemplate="{DynamicResource DataTemplateList}"
-				ItemsPanel="{DynamicResource ItemsPanelTemplate1}"
+			 
 				ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.GroupStyle>
                     <GroupStyle ContainerStyle="{StaticResource GroupContainerStyle}">
                         <GroupStyle.HeaderTemplate>
                             <DataTemplate>
-                                <Border BorderBrush="Black" BorderThickness="1" Height="30">
-                                    <TextBlock Text="{Binding Name}" FontSize="30" FontWeight="Bold" />
-                                </Border>
+                          
+                                    <TextBlock Text="{Binding Name}"  />
+                         
                             </DataTemplate>
                         </GroupStyle.HeaderTemplate>
                     </GroupStyle>
@@ -505,33 +531,19 @@
                 </ListView.View>
 				  
             </ListView>
-            <StackPanel Orientation="Vertical" Grid.Row="2" d:LayoutOverrides="Height">
-            	<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            		<TextBlock TextWrapping="Wrap" Text="模块"
-            			VerticalAlignment="Center" />
-            		<TextBox Width="50" TextWrapping="Wrap" Text="{Binding ETLMount}" VerticalAlignment="Center"
-            			FontSize="16" />
-            		<TextBlock TextWrapping="Wrap" Text="/" VerticalAlignment="Center"
-            			FontSize="16" />
-            		<TextBlock TextWrapping="Wrap" Text="{Binding AllETLMount}"
-            			VerticalAlignment="Center" FontSize="16" />
-            		<TextBlock TextWrapping="Wrap" Margin="15,0,0,0"
-            			VerticalAlignment="Center" ><Run Language="zh-cn" Text="采样量"/></TextBlock>
-            		<TextBox Width="50" TextWrapping="Wrap" Text="{Binding SampleMount}" ToolTip="设置获取数据表的前n行" VerticalAlignment="Center"
-            			FontSize="16" />
-            		<CheckBox Content="自动刷新" IsChecked="{Binding IsAutoRefresh}" VerticalAlignment="Center" Margin="15,0,0,0" />
-            		<CheckBox Content="调试详情" IsChecked="{Binding DisplayDetail}" VerticalAlignment="Center" Margin="15,0,0,0" />
-            	</StackPanel>
-            	<StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Height="25" Margin="0,8,0,0" VerticalAlignment="Bottom">
-            		<ComboBox Width="120" ItemsSource="{attributes:EnumValues {x:Type connectors:GenerateMode}}" SelectedItem="{Binding GenerateMode}" d:LayoutOverrides="Height" VerticalAlignment="Center"/>
-            		<TextBlock TextWrapping="Wrap" Text="线程数" VerticalAlignment="Center" Margin="8,0,0,0" Visibility="{Binding GenerateMode, Converter={StaticResource GeneratorConverter}}" />
-            		<TextBox TextWrapping="Wrap" Text="{Binding MaxThreadCount}" VerticalAlignment="Center" Margin="8,0,0,0" Width="40" Visibility="{Binding GenerateMode, Converter={StaticResource GeneratorConverter}}" />
-            		<Button DataContext="{Binding Commands3[0]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Center" Width="80" Margin="10,0,0,0"/>
-            	</StackPanel>
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,0,0,7" VerticalAlignment="Bottom" Grid.Row="2">
+            	<Rectangle Width="20" Height="20" d:LayoutOverrides="Height" Margin="0,0,10,0" >
+            		<Rectangle.Fill>
+            			<VisualBrush Stretch="Fill"
+            				Visual="{Binding ConverterParameter=hourglass, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
+            		</Rectangle.Fill>
+            	</Rectangle>
+            	<ComboBox Width="120" ItemsSource="{attributes:EnumValues {x:Type connectors:GenerateMode}}" SelectedItem="{Binding GenerateMode}" d:LayoutOverrides="Height" VerticalAlignment="Center"/>
+            	<TextBlock TextWrapping="Wrap" Text="线程数" VerticalAlignment="Center" Margin="8,0,0,0" Visibility="{Binding GenerateMode, Converter={StaticResource GeneratorConverter}}" />
+            	<TextBox TextWrapping="Wrap" Text="{Binding MaxThreadCount}" VerticalAlignment="Center" Margin="8,0,0,0" Width="40" Visibility="{Binding GenerateMode, Converter={StaticResource GeneratorConverter}}" />
+            	<Button DataContext="{Binding Commands3[0]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Center" Width="80" Margin="10,0,0,0"/>
             </StackPanel>
         </Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="20,16.333,0,0" TextWrapping="Wrap" VerticalAlignment="Top"
-			Height="13.742" Width="53.149"><Run Language="zh-cn" Text="快速检索:" /></TextBlock>
         <GridSplitter Margin="0,0,-2.438,0" Width="5" Grid.RowSpan="2" />
 
     </Grid>
